Fix Padding and layout problems in new UI consultation page.

--- a/src/main/frontend/src/consults/_consults.scss
+++ b/src/main/frontend/src/consults/_consults.scss
@@ -46,4 +46,11 @@
 		margin-bottom: $margin-md;
 		margin-top: $margin-md;
 	}
+	.consultation-search-filter>div{
+		margin-top: $margin-sm;
+	}
+	.consultation-search-filter {
+		display:flex;
+		flex-wrap:wrap;
+	}
 }
